# comandante_portal

./: .gitignore  CLAUDE.md  README.md  chat_db.py  config.py  db.py  environment.yml  ldap_auth.py  main.py  modules.py  pyproject.toml  requirements.txt  run.sh  secure_config_store.py  server_monitor.py  server_utils.py  support_db.py  telethon_runner.py  web_app.py  wiki_db.py
deploy/: Caddyfile  cobaltax.service  install.sh  setup_env.sh  update.sh
scripts/: check_telegram_creds.py  init_db.py  save_telegram_creds.py  seal_env.py  seed_portal_config.py  telegram_login.py  telegram_whoami.py  test.py
static/: app.js  index.html  manifest.json  service-worker.js  style.css
translations/: ca.json  en.json  es.json
